@@ -2,7 +2,8 @@
 \newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 \section{Changes in version 2.9.3}{ 
 \itemize{
-\item ?.
+\item Acceleration rate has been improved. It is now progressively increasing.
+\item The Newton-Raphson root finding in C++ functions has been improved. It affects only \code{"Weibull"}, \code{"gamma"} and \code{"vonMises"} parametric families.
 }
 }
 \section{Changes in version 2.9.2}{ 
